Refactor contact page navigation with Bootstrap
Updated navigation structure to use Bootstrap classes and added a header.

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,7 @@
 <head>
 
 <meta charset="UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="main.css">
 
 <title>GLOW UP SALON</title>
 <!-- Bootstrap CSS -->
@@ -29,10 +26,14 @@
        <a/>
          
     <h2>Contact Us</h2>                         
-   <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html"> Contact</a> |
-            <a href="index.html"> Services</a> |
+   <nav class="navbar">
+    <h1>GlowUp Salon</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
             
 </header>
 <main>
