--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 </head>
 <body><header>
   <h2>GlowUp Salon</h2>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#services">Services</a>
-    <a href="#contact">Contact</a>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 </header><section id="home" class="hero">
   <h1>Your Beauty, Our Passion</h1>
@@ -34,7 +36,7 @@
   <h2>Our Services</h2>
   <div class="services">
     <div class="card"><h3>Hair Styling</h3><p>Wash, blow-dry, braids, locs.</p></div>
-    <div class="card"><h3>Nails</h3><p>Manicure, pedicure, gel.</p></div>
+    <div class="card"><h3>Nails</h3><p>Manicure & pedicure</p></div>
     <div class="card"><h3>Makeup</h3><p>Events, photoshoots, daily glam.</p></div>
   </div>
 </section><section id="contact">
