--- a/Services.html
+++ b/Services.html
@@ -13,3 +13,17 @@
     </ul>
   </nav>
 </header>
+<body>
+<section class="page">
+  <h2>Our Services</h2>
+
+  <h3>Hair</h3>
+  <p>Wash, blow-dry, braids, locs</p>
+
+  <h3>Nails</h3>
+  <p>Manicure, pedicure, gel</p>
+
+  <h3>Makeup</h3>
+  <p>Events, photoshoots, daily glam</p>
+</section>
+</body>
