Revise contact section with new details
Updated contact information and simplified layout.

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -15,7 +13,6 @@
   <!-- Bootstrap JS and dependencies -->
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   </head>
 <body>
@@ -25,40 +22,13 @@
      <a href="index.html">
        <a/>
          
-    <h2>Contact Us</h2>                         
-   <nav class="navbar">
-    <h1>GlowUp Salon</h1>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-            
-</header>
-<main>
-<main class="container my-5">
-<p> Visit Us
-<br>
-  [Block 6, Palm Grove Shopping Centre, Baines Drift RD, Gaborone]
-<br>
-</p>
-  
-<p>Business Hours
-  <br>
- Monday-Friday:[0830]-[1700]
-  <br>
-  Saturday:[0800]-[1300]         
-  <br>
-  Sunday:Closed
-  <br>
-</p>
-  
-<p>Call Us                                                                   
- [+267 74620996]                                                           
-<br>
-</p>
-  
+  <section class="page">
+  <h2>Contact Us</h2>
+  <p>📞 Phone: 7X XXX XXX</p>
+  <p>📍 Location: Gaborone</p>
+  <p>🕒 Hours: Mon–Sat, 9am–6pm</p>
+</section>
+`
  <p>Email Us                                                                  
  [<a href="mailto:Speedstar-Motors@gmail.com">GlowUpSalon@Gmail.com</a>]
 <br>
