Fix link case sensitivity for Services page

--- a/index.html
+++ b/index.html
@@ -3,29 +3,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GlowUp Salon</title>
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
-    body { line-height: 1.6; background: #fafafa; color: #222; }
-    header { background: #000; color: #fff; padding: 1.5rem; text-align: center; }
-    nav a { color: #fff; margin: 0 10px; text-decoration: none; font-weight: bold; }
-    section { padding: 3rem 1.5rem; max-width: 1000px; margin: auto; }
-    .hero { text-align: center; }
-    .hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
-    .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; }
-    .card { background: #fff; padding: 1.5rem; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .card h3 { margin-bottom: .5rem; }
-    form { display: grid; gap: 1rem; }
-    input, textarea, button { padding: .75rem; font-size: 1rem; }
-    button { background: #000; color: #fff; border: none; cursor: pointer; }
-    footer { text-align: center; padding: 1.5rem; background: #eee; margin-top: 3rem; }
-  </style>
+
 </head>
 <body><header>
   <h2>GlowUp Salon</h2>
   <nav class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
+      <li><a href="Services.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
