--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>GLOW UP SALON</title>
-<!-- Bootstrap CSS -->
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Bootstrap JS and dependencies -->
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   </head>
 <body>
 
@@ -44,7 +36,7 @@
 </main>
   
 <footer>
-<p>&copy; 2025 GLOW UP SALON. All rights reserved. </p>
+<p> 2025 GLOW UP SALON. All rights reserved. </p>
 </footer>
 </body>
 </html>
