--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <textarea placeholder="Service you want" required></textarea>
     <button type="submit">Send Booking</button>
   </form>
+       <iframe src="https://forms.gle/XXXX" width="100%" height="600"></iframe>
 </section><footer>
   <p>© 2025 GlowUp Salon | All Rights Reserved</p>
 </footer></body>
