--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,13 @@
 <body>
 
 <header>
-   <div class="logo-nav">
-     <a href="index.html">
-       <a/>
+   <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Services.html">Services</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
          
   <section class="page">
   <h2>Contact Us</h2>
