Change iframe to embedded view for Google Form
Updated iframe to use embedded view for Google Form.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <textarea placeholder="Service you want" required></textarea>
     <button type="submit">Send Booking</button>
   </form>
-       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?usp=header>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?embedded=true" 
+         width="640" height="1075" frameborder="0"
+         marginheight="0" marginwidth="0">Loading…</iframe>
+         
 </section><footer>
   <p>© 2025 GlowUp Salon | All Rights Reserved</p>
 </footer></body>
