--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,19 @@
   </head>
 <body>
 
-<header>
-   <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+<header class="header">
+  <div class="nav-container">
+    <h1 class="logo">GlowUp Salon</h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
          
   <section class="page">
   <h2>Contact Us</h2>
