--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
   <title>GlowUp Salon</title>
 
 </head>
-<body><header>
-  <h2>GlowUp Salon</h2>
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</header><section id="home" class="hero">
+  <header class="header">
+  <div class="nav-container">
+    <h1 class="logo">GlowUp Salon</h1>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+<body>
+<section id="home" class="hero">
   <h1>Your Beauty, Our Passion</h1>
   <p>Professional hair, nails & beauty services you can trust.</p>
 </section><section id="services">
