--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
   </div>
 </header>
 <body>
-<section id="home" class="hero">
-  <h1>Your Beauty, Our Passion</h1>
-  <p>Professional hair, nails & beauty services you can trust.</p>
-</section><section id="services">
+<section class="hero">
+  <div class="hero-text">
+    <h2>Your Beauty, Our Passion</h2>
+    <p>Professional hair, nails & beauty services you can trust.</p>
+    <a href="services.html" class="btn">View Services</a>
+  </div>
+</section>
+  
   <h2>Our Services</h2>
   <div class="services">
     <div class="card"><h3>Hair Styling</h3><p>Wash, blow-dry, braids, locs.</p></div>
