--- a/Services.html
+++ b/Services.html
@@ -18,13 +18,25 @@
 <section class="page">
   <h2>Our Services</h2>
 
-  <h3>Hair</h3>
-  <p>Wash, blow-dry, braids, locs</p>
+  <div class="services-grid">
+    <div class="service-card">
+      <img src="images/hair.jpg" alt="Hair styling">
+      <h3>Hair Styling</h3>
+      <p>Wash, blow-dry, braids, locs</p>
+    </div>
 
-  <h3>Nails</h3>
-  <p>Manicure, pedicure, gel</p>
+    <div class="service-card">
+      <img src="images/nails.jpg" alt="Nails">
+      <h3>Nails</h3>
+      <p>Manicure, pedicure, gel</p>
+    </div>
 
-  <h3>Makeup</h3>
-  <p>Events, photoshoots, daily glam</p>
+    <div class="service-card">
+      <img src="images/makeup.jpg" alt="Makeup">
+      <h3>Makeup</h3>
+      <p>Events, photoshoots, daily glam</p>
+    </div>
+  </div>
 </section>
+
 </body>
