--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <a href="services.html" class="btn">View Services</a>
   </div>
 </section>
-  
+
+<main class="container">
   <h2>Our Services</h2>
   <div class="services">
     <div class="card"><h3>Hair Styling</h3><p>Wash, blow-dry, braids, locs.</p></div>
@@ -41,7 +42,9 @@
          width="640" height="1075" frameborder="0"
          marginheight="0" marginwidth="0">Loading…</iframe>
          
-</section><footer>
+</section>
+</main>
+<footer>
   <p>© 2025 GlowUp Salon | All Rights Reserved</p>
 </footer></body>
 </html>
