--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
     <div class="card"><h3>Nails</h3><p>Manicure & pedicure</p></div>
     <div class="card"><h3>Makeup</h3><p>Events, photoshoots, daily glam.</p></div>
   </div>
-</section><section id="contact">
+</section class="booking">
   <h2>Book an Appointment</h2>
  
-
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?embedded=true" 
-         width="640" height="1075" frameborder="0"
-         marginheight="0" marginwidth="0">Loading…</iframe>
-         
+  <div class="booking-box">
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?embedded=true" 
+      width="100%"
+      height="650"
+      frameborder="0">
+  </iframe>
+  </div>
 </section>
 </main>
 <footer>
