Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -18,25 +18,48 @@
     </nav>
   </div>
 </header>
-<body>
-<section class="hero">
-  <div class="hero-text">
-    <h2>Your Beauty, Our Passion</h2>
-    <p>Professional hair, nails & beauty services you can trust.</p>
-    <a href="services.html" class="btn">View Services</a>
-  </div>
-</section>
 
-<main class="container">
-  <h2>Our Services</h2>
-  <div class="services">
-    <div class="card"><h3>Hair Styling</h3><p>Wash, blow-dry, braids, locs.</p></div>
-    <div class="card"><h3>Nails</h3><p>Manicure & pedicure</p></div>
-    <div class="card"><h3>Makeup</h3><p>Events, photoshoots, daily glam.</p></div>
-  </div>
-</section class="booking">
-  <h2>Book an Appointment</h2>
- 
+<body>
+  <header class="site-header">
+    <!-- navbar here -->
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Your Beauty, Our Passion</h1>
+        <p>Professional hair, nails & beauty services you can trust.</p>
+        <a href="services.html" class="btn">View Services</a>
+      </div>
+    </section>
+
+    <section class="section">
+      <!-- services -->
+      <h2>Our Services</h2>
+      <div class="services-grid">
+        <div class="service-card">
+          <h3>Hair Styling</h3>
+          <p>Wash, blow-dry, braids, locs.</p>
+        </div>
+      
+        <div class="service-card">
+          <h3>Nails</h3>
+          <p>Manicure & pedicure.</p>
+        </div>
+      
+        <div class="service-card">
+          <h3>Makeup</h3>
+          <p>Events, photoshoots, daily glam.</p>
+        </div>
+      </div>      
+    </section>
+
+    <section class="section booking-section">
+      <!-- booking -->
+      <h2>Book an Appointment</h2>
+    </section>
+  </main>
+
   <div class="booking-box">
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?embedded=true" 
