--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
   <header class="header">
   <div class="nav-container">
-    <h1 class="logo">GlowUp Salon</h1>
+    <div class="brand">
+  <img src="images/logo.png" alt="GlowUp Salon Logo" class="logo-img">
+  <span class="brand-name">GlowUp Salon</span>
+</div>
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
