--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header class="header">
   <div class="nav-container">
     <div class="brand">
-  <img src="images/logo.png" alt="GlowUp Salon Logo" class="logo-img">
+  <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
   <span class="brand-name">GlowUp Salon</span>
 </div>
     <nav>
