--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>GlowUp Salon</title>
 
 </head>
-  <header class="header">
   <div class="nav-container">
     <div class="brand">
   <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
@@ -25,6 +24,19 @@
 <body>
   <header class="site-header">
     <!-- navbar here -->
+     <div class="nav-container">
+    <div class="brand">
+  <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
+  <span class="brand-name">GlowUp Salon</span>
+</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   </header>
 
   <main>
