--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <!-- navbar here -->
      <div class="nav-container">
     <div class="brand">
+ <a href="index.html" class="brand">
   <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
   <span class="brand-name">GlowUp Salon</span>
+   </a>
 </div>
     <nav>
       <ul class="nav-links">
