--- a/index.html
+++ b/index.html
@@ -22,24 +22,23 @@
 </header>
 
 <body>
-  <header class="site-header">
-    <!-- navbar here -->
-     <div class="nav-container">
-    <div class="brand">
- <a href="index.html" class="brand">
-  <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
-  <span class="brand-name">GlowUp Salon</span>
-   </a>
-</div>
+
+<header class="site-header">
+  <div class="nav-container">
+    <a href="index.html" class="brand">
+      <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
+      <span class="brand-name">GlowUp Salon</span>
+    </a>
+
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="Services.html">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
-  </header>
+</header>
 
   <main>
     <section class="hero">
