--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GlowUp Salon</title>
-
+  <link rel="stylesheet" href="style.css">
 </head>
-  <div class="nav-container">
-    <div class="brand">
-  <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
-  <span class="brand-name">GlowUp Salon</span>
-</div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
 
 <body>
 
 <header class="site-header">
   <div class="nav-container">
+
     <a href="index.html" class="brand">
       <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
       <span class="brand-name">GlowUp Salon</span>
@@ -37,56 +24,58 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+
   </div>
 </header>
 
-  <main>
-    <section class="hero">
-      <div class="hero-content">
-        <h1>Your Beauty, Our Passion</h1>
-        <p>Professional hair, nails & beauty services you can trust.</p>
-        <a href="services.html" class="btn">View Services</a>
+<main>
+
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Your Beauty, Our Passion</h1>
+      <p>Professional hair, nails & beauty services you can trust.</p>
+      <a href="services.html" class="btn">View Services</a>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>Our Services</h2>
+
+    <div class="services-grid">
+      <div class="service-card">
+        <h3>Hair Styling</h3>
+        <p>Wash, blow-dry, braids, locs.</p>
       </div>
-    </section>
 
-    <section class="section">
-      <!-- services -->
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <h3>Hair Styling</h3>
-          <p>Wash, blow-dry, braids, locs.</p>
-        </div>
-      
-        <div class="service-card">
-          <h3>Nails</h3>
-          <p>Manicure & pedicure.</p>
-        </div>
-      
-        <div class="service-card">
-          <h3>Makeup</h3>
-          <p>Events, photoshoots, daily glam.</p>
-        </div>
-      </div>      
-    </section>
+      <div class="service-card">
+        <h3>Nails</h3>
+        <p>Manicure & pedicure.</p>
+      </div>
 
-    <section class="section booking-section">
-      <!-- booking -->
-      <h2>Book an Appointment</h2>
-    </section>
-  </main>
+      <div class="service-card">
+        <h3>Makeup</h3>
+        <p>Events, photoshoots, daily glam.</p>
+      </div>
+    </div>
+  </section>
 
-  <div class="booking-box">
+  <section class="section booking-section">
+    <h2>Book an Appointment</h2>
+
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?embedded=true" 
+      src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?embedded=true"
       width="100%"
       height="650"
       frameborder="0">
-  </iframe>
-  </div>
-</section>
+    </iframe>
+  </section>
+
 </main>
+
 <footer>
   <p>© 2025 GlowUp Salon | All Rights Reserved</p>
-</footer></body>
+</footer>
+
+</body>
 </html>
+
