--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GlowUp Salon</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Add meta description for SEO -->
+  <meta name="description" content="Professional hair, nails & beauty services at GlowUp Salon. Your beauty is our passion.">
 </head>
 
 <body>
 
 <header class="site-header">
   <div class="nav-container">
-
     <a href="index.html" class="brand">
-      <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
+      <img src="logo.png" alt="GlowUp Salon Logo" class="logo-img">
       <span class="brand-name">GlowUp Salon</span>
     </a>
 
@@ -24,12 +25,10 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-
   </div>
 </header>
 
 <main>
-
   <section class="hero">
     <div class="hero-content">
       <h1>Your Beauty, Our Passion</h1>
@@ -40,36 +39,34 @@
 
   <section class="section">
     <h2>Our Services</h2>
-
     <div class="services-grid">
       <div class="service-card">
         <h3>Hair Styling</h3>
-        <p>Wash, blow-dry, braids, locs.</p>
+        <p>Wash, blow-dry, braids, locs, and professional styling.</p>
       </div>
-
       <div class="service-card">
         <h3>Nails</h3>
-        <p>Manicure & pedicure.</p>
+        <p>Manicure, pedicure, nail art, and extensions.</p>
       </div>
-
       <div class="service-card">
         <h3>Makeup</h3>
-        <p>Events, photoshoots, daily glam.</p>
+        <p>Events, photoshoots, daily glam, and special occasions.</p>
       </div>
     </div>
   </section>
 
   <section class="section booking-section">
     <h2>Book an Appointment</h2>
-
+    <p>Schedule your beauty session with us today.</p>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLSftvKgcss3rpd6L2TLB4cNpbNr9RNRn13Oe6waTLygNk4Zh4A/viewform?embedded=true"
       width="100%"
       height="650"
-      frameborder="0">
+      frameborder="0"
+      title="Booking Form">
+      Loading…
     </iframe>
   </section>
-
 </main>
 
 <footer>
@@ -78,4 +75,3 @@
 
 </body>
 </html>
-
