--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="site-header">
   <div class="nav-container">
     <a href="index.html" class="brand">
-      <img src="logo.png" alt="GlowUp Salon Logo" class="logo-img">
+      <img src="logo.png.png" alt="GlowUp Salon Logo" class="logo-img">
       <span class="brand-name">GlowUp Salon</span>
     </a>
 
